fixed button visibiity and hover issues

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,9 @@
 :root {
 	--header-height: 3rem;
 	--hue: 0;
-	--sat: 0;
-	--title-color: hsl(var(--hue), var(--sat), 20%);
-	--title-color-dark: hsl(0, 0%, 9%);
+	--sat: 0%;
+    --title-color: hsl(var(--hue), var(--sat), 20%);
+    --title-color-dark: hsl(27, 75%, 55%);
     --text-color: hsl(var(--hue), var(--sat), 46%);
     --body-color: hsl(var(--hue), var(--sat), 98%);
     --container-color: #fff;
@@ -95,12 +95,12 @@ img {
 }
 
 .section {
-    padding: 6rem 0 2rem;
+    padding: 6rem 0 6rem;
 }
 .section__subtitle {
     display: block;
     font-size: var(--small-font-size);
-    margin-bottom: 4rem;
+    margin-bottom: 3rem;
 }
 .section__title, .section__subtitle {
     text-align: center;
