--- a/src/components/generator/generator.css
+++ b/src/components/generator/generator.css
@@ -5,18 +5,7 @@
 .generator__tabs {
     display: flex;
     justify-content: space-evenly;
-    margin-bottom: var(--mb-2);
-}
-
-.generator__button {
-    font-size: var(--h3-font-size);
-    font-weight: var(--font-medium);
-    color: var(--title-color);
-    margin: 0 var(--mb-1);
-    cursor: pointer;
-}
-.generator__button:hover {
-    color: var(--title-color-dark);
+    margin-bottom: var(--mb-3);
 }
 
 .generator__icon {
@@ -26,6 +15,9 @@
 
 .generator__active {
     color: var(--title-color-dark)
+}
+.generator__active:hover{
+    color: var(--container-color);
 }
 
 .generator__sections {
@@ -42,12 +34,6 @@
     display: block;
 }
 
-/* .generator__data {
-    display: grid;
-    grid-template-columns: 1fr max-content 1fr;
-    column-gap: 1.5rem;
-} */
-
 .generator__title {
     font-size: var(--normal-font-size);
     font-weight: var(--font-medium);
@@ -59,8 +45,6 @@
     margin-bottom: var(--mb-1);
 }
 
-
-/* BREAK POINTS */
 @media screen and (max-width: 992px) {
     .generator__container {
         margin-left: auto;
